Cambio de visualización de los proyectos
Aquí ya se realizó la visualización de los proyectos como los había
solicitado el cliente, tiene la imagen en grande y centrada, el texto
por debajo de la imagen.

--- a/html/our_projects/activia.html
+++ b/html/our_projects/activia.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+﻿ 	<!doctype html>
 
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 
@@ -634,11 +634,11 @@
 
                                         <div class="columns-preview-media"  data-src="assets/media/store/wallpapers/VI_B-1-i.jpg"></div>
 
-                                        <div class="columns-preview-description" style="color: #FFF;">
+                                        <div class="columns-preview-description" >
 
-                                            <p style="color: #FFF; font-size:28px;">CHAMPLING FLORA</p>
+                                            <p style="color: #c42634;  font-size:28px;">CHAMPLING FLORA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
+                                            <span style="color: #8d8d8d; font-size:20px;">
                                                  <br><br><br>Con Flora de Activia</br> 
                                                     ¡Panza sana para toda la familia!</br><br><br>
                                                    
