--- a/html/our_projects/bonafont_agua_jugo.html
+++ b/html/our_projects/bonafont_agua_jugo.html
@@ -663,10 +663,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                             <p style="color: #c42634;  font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              GUERRILLA -SAMPLING            Lanzamiento Bonafont                                            con Extracto de Jamaica <br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style="color: #8d8d8d; font-size:20px;">
+                                              GUERRILLA -SAMPLING            Lanzamiento Bonafont                                            con Extracto de Jamaica <br></span><span style="color: #8d8d8d; font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
@@ -682,10 +682,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:20px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              GUERRILLA -SAMPLING            Lanzamiento Bonafont                                            con Extracto de Jamaica <br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style="color: #8d8d8d; font-size:20px;">
+                                              GUERRILLA -SAMPLING            Lanzamiento Bonafont                                            con Extracto de Jamaica <br></span><span style="color: #8d8d8d; font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
