--- a/html/our_projects/bonafont_agua_natural.html
+++ b/html/our_projects/bonafont_agua_natural.html
@@ -715,10 +715,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                             <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                           <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                           <span style="font-size:28px;">
+                                              PROMO URNA<br></span><span style=" font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -734,10 +734,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                           <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                           <span style=" font-size:28px;">
+                                              PROMO URNA<br></span><span style="c font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -751,10 +751,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="ccolor: #c42634; font-size:28px;">Bonafont</p>
 
-                                           <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                           <span style=" font-size:28px;">
+                                              PROMO URNA<br></span><span style=" font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -768,10 +768,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                            <span style="font-size:28px;">
+                                              PROMO URNA<br></span><span style=" font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
