--- a/html/our_projects/bonafont_convencion.html
+++ b/html/our_projects/bonafont_convencion.html
@@ -765,10 +765,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                             <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                           <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                           <span style=" font-size:28px;">
+                                              PROMO URNA<br></span><span style="font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -784,10 +784,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                           <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                           <span style=" font-size:28px;">
+                                              PROMO URNA<br></span><span style="font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -801,10 +801,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="ccolor: #c42634; font-size:28px;">Bonafont</p>
 
-                                           <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                           <span style="font-size:28px;">
+                                              PROMO URNA<br></span><span style="font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -818,10 +818,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
                                             <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                              PROMO URNA<br></span><span style=" font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -833,10 +833,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                            <span style=" font-size:28px;">
+                                              PROMO URNA<br></span><span style=" font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
@@ -848,10 +848,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              PROMO URNA<br><br><br></span><span style="color: #FFF; font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
+                                            <span style=" font-size:28px;">
+                                              PROMO URNA<br><br><br></span><span style="font-size:18px;">¡Con Bonafont tienes 3000 razones                          para sentirte más ligero!                                                                                      Toma 2L de agua al día y gana 3000 pesos                           en vales de despensa cada quincena.<br><br> 
 
                                             </span>
 
