--- a/html/our_projects/bonafont_gas.html
+++ b/html/our_projects/bonafont_gas.html
@@ -714,10 +714,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                             <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style=" font-size:28px;">
+                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br></span><span style="font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
@@ -733,10 +733,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style=" font-size:28px;">
+                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br></span><span style="font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
@@ -751,10 +751,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                             <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style="font-size:28px;">
+                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br></span><span style="font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
@@ -773,10 +773,10 @@
 
                                         <div class="columns-preview-description">
 
-                                              <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                              <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style=" font-size:28px;">
+                                               AMBIENT MARKETING                     Lanzamiento Bonafont Mineralizada <br></span><span style=" font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
