--- a/html/our_projects/bonafont_levite.html
+++ b/html/our_projects/bonafont_levite.html
@@ -715,10 +715,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                             <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO"<br><br><br></span><span style="color: #FFF; font-size:18px;">Nos da gusto tomar más  agua con EL NUEVO SABOR DEL VERANO.<br><br> 
+                                            <span style=" font-size:28px;">
+                                             AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO"<br></span><span style=" font-size:18px;">Nos da gusto tomar más  agua con EL NUEVO SABOR DEL VERANO.<br><br> 
 
                                             </span>
 
@@ -734,10 +734,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO"<br><br><br></span><span style="color: #FFF; font-size:18px;">Nos da gusto tomar más  agua con EL NUEVO SABOR DEL VERANO.<br><br> 
+                                            <span style=" font-size:28px;">
+                                             AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO"<br></span><span style="font-size:18px;">Nos da gusto tomar más  agua con EL NUEVO SABOR DEL VERANO.<br><br> 
 
                                             </span>
 
@@ -751,10 +751,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO" <br><br><br></span><span style="color: #FFF; font-size:18px;">Nos da gusto tomar más  agua con EL NUEVO SABOR DEL VERANO.<br><br> 
+                                            <span style=" font-size:28px;">
+                                             AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO" <br></span><span style=" font-size:18px;">Nos da gusto tomar más  agua con EL NUEVO SABOR DEL VERANO.<br><br> 
 
                                             </span>
 
@@ -768,10 +768,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">Bonafont</p>
+                                           <p style="color: #c42634; font-size:28px;">Bonafont</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                              AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO"<br><br><br></span><span style="color: #FFF; font-size:18px;">Thinking Out of the bubble!<br><br> 
+                                            <span style=" font-size:28px;">
+                                              AMBIENT  MARKETING                     Lanzamiento  Levité Piña  & Coco     "EL NUEVO SABOR DEL VERANO"<br></span><span style=" font-size:18px;">Thinking Out of the bubble!<br><br> 
 
                                             </span>
 
