--- a/html/our_projects/fox.html
+++ b/html/our_projects/fox.html
@@ -637,10 +637,10 @@
 
                                         <div class="columns-preview-description">
 
-                                                 <p style="color: #FFF; font-size:28px;">FOX</p>
+                                                 <p style="color: #c42634; font-size:28px;">FOX</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br><br><br></span><span style="color: #FFF; font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
+                                            <span style=" font-size:28px;">
+                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br></span><span style=" font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
 
                                             </span>
 
@@ -655,10 +655,10 @@
                                         <div class="columns-preview-media" data-src="assets/media/our_projects/projects/fox/Guerrilla-Marketing-GIDEAS--para-FOX-_IV--A--5---ii.jpg"></div>
 
                                         <div class="columns-preview-description">
-     <p style="color: #FFF; font-size:28px;">FOX</p>
+     										<p style="color: #c42634; font-size:28px;">FOX</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br><br><br></span><span style="color: #FFF; font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
+                                            <span style=" font-size:28px;">
+                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br></span><span style=" font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
 
                                             </span>
 
@@ -673,10 +673,10 @@
 
                                         <div class="columns-preview-description">
 
-                                                <p style="color: #FFF; font-size:28px;">FOX</p>
+                                                <p style="color: #c42634; font-size:28px;">FOX</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br><br><br></span><span style="color: #FFF; font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
+                                            <span style=" font-size:28px;">
+                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br></span><span style=" font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
 
                                             </span>
                                         </div>
@@ -692,10 +692,10 @@
                                         </div>
 
                                         <div class="columns-preview-description">
-     <p style="color: #FFF; font-size:28px;">FOX</p>
+     											<p style="color: #c42634; font-size:28px;">FOX</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br><br><br></span><span style="color: #FFF; font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
+                                            <span style=" font-size:28px;">
+                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br></span><span style=" font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
 
                                             </span>
 
@@ -709,10 +709,10 @@
 
                                         <div class="columns-preview-description">
 
-                                                     <p style="color: #FFF; font-size:28px;">FOX</p>
+                                                     <p style="ccolor: #c42634; font-size:28px;">FOX</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br><br><br></span><span style="color: #FFF; font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
+                                            <span style=" font-size:28px;">
+                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br></span><span style=" font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
 
                                             </span>
 
@@ -726,10 +726,10 @@
 
                                         <div class="columns-preview-description">
 
-                                               <p style="color: #FFF; font-size:28px;">FOX</p>
+                                               <p style="color: #c42634; font-size:28px;">FOX</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br><br><br></span><span style="color: #FFF; font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
+                                            <span style=" font-size:28px;">
+                                             GUERRILLA MARKETING -  FOX One Stop Media -  "Mmmmm….Pizza!!!!"<br></span><span style=" font-size:18px;">GIDEAS' Special Pizza Delivery<br><br>    
 
                                             </span>
 
