--- a/html/our_projects/jack_daniels1.html
+++ b/html/our_projects/jack_daniels1.html
@@ -770,10 +770,10 @@
                                         <div class="columns-preview-description">
 
                                             
-                                            <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                            <p style="color: #c42634;  font-size:28px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen. <br><br><br></span><span style="color: #FFF; font-size:18px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
+                                            <span style="font-size:20px;">
+                                             ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen. <br></span><span style="color:font-size:20px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
 
                                             </span>
 
@@ -790,10 +790,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                            <p style="color: #c42634;  font-size:28px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen.  <br><br><br></span><span style="color: #FFF; font-size:18px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
+                                            <span style="font-size:20px;">
+                                             ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen.  <br></span><span style="font-size:20px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
 
                                             </span>
 
@@ -808,10 +808,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                            <p style="color: #c42634; font-size:28px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen. <br><br><br></span><span style="color: #FFF; font-size:18px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
+                                            <span style="font-size:20px;">
+                                            ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen. <br></span><span style="font-size:20px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
 
                                             </span>
 
@@ -829,10 +829,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                            <p style="color: #c42634; font-size:28px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen. <br><br><br></span><span style="color: #FFF; font-size:18px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
+                                            <span style="font-size:20px;">
+                                            ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen. <br></span><span style="font-size:20px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
 
                                             </span>
 
@@ -846,10 +846,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                            <p style="color: #c42634; font-size:28px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen.  <br><br><br></span><span style="color: #FFF; font-size:18px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
+                                            <span style="font-size:20px;">
+                                            ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen.  <br></span><span style="font-size:20px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
 
                                             </span>
 
@@ -863,10 +863,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                           <p style="color: #c42634; font-size:28px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen.  <br><br><br></span><span style="color: #FFF; font-size:18px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
+                                            <span style="font-size:20px;">
+                                             ACTIVACIONES                                                        Semana Santa  2012,                      Playa Del Carmen.  <br></span><span style="font-size:20px;">Jack Lives in Playa.                     SOUNDS Good! <br><br> 
 
                                             </span>
 
