--- a/html/our_projects/jack_daniels2.html
+++ b/html/our_projects/jack_daniels2.html
@@ -742,10 +742,10 @@
 
                                         <div class="columns-preview-description">
 
-                                         <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                         <p style="font-size:20px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)   <br><br><br></span><span style="color: #FFF; font-size:18px;">Do you know Mr. Jack?<br><br> 
+                                            <span style="font-size:20px;">
+                                            APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)   <br><br><br></span><span style="font-size:18px;">Do you know Mr. Jack?<br><br> 
 
                                             </span>
 
@@ -762,10 +762,10 @@
 
                                         <div class="columns-preview-description">
 
-                                          <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                          <p style="font-size:20px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)  <br><br><br></span><span style="color: #FFF; font-size:18px;">Do you know Mr. Jack? <br><br> 
+                                            <span style="font-size:20px;">
+                                           APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)  <br><br><br></span><span style="font-size:18px;">Do you know Mr. Jack? <br><br> 
 
                                             </span>
 
@@ -781,10 +781,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                           <p style="font-size:20px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)   <br><br><br></span><span style="color: #FFF; font-size:18px;">Do you know Mr. Jack? <br><br> 
+                                            <span style="font-size:20px;">
+                                            APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)   <br><br><br></span><span style="font-size:18px;">Do you know Mr. Jack? <br><br> 
 
                                             </span>
 
@@ -802,10 +802,10 @@
                                         </div>
 
                                         <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                        <p style="font-size:20px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)  <br><br><br></span><span style="color: #FFF; font-size:18px;">Do you know Mr. Jack? <br><br> 
+                                            <span style="font-size:20px;">
+                                           APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)  <br><br><br></span><span style="font-size:18px;">Do you know Mr. Jack? <br><br> 
 
                                             </span>
 
@@ -823,10 +823,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">JACK DANIELS</p>
+                                           <p style="font-size:20px;">JACK DANIELS</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)   <br><br><br></span><span style="color: #FFF; font-size:18px;">Do you know Mr. Jack? <br><br> 
+                                            <span style="font-size:20px;">
+                                            APPLICACIÓN para  IPAD  "HAPPY  161st B-DAY"     Jack Daniel's  161st B-DAY Campaign (2011)   <br><br><br></span><span style="font-size:18px;">Do you know Mr. Jack? <br><br> 
 
                                             </span>
 
