--- a/html/our_projects/kelloggs.html
+++ b/html/our_projects/kelloggs.html
@@ -637,10 +637,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">KELLOGG´S</p>
+                                           <p style="color: #c42634; font-size:28px;">KELLOGG´S</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               HOMBRE-PANTALLAS<br> ACTIVACIONES EN AUTOSERVICIO<br><br></span><span style="color: #FFF; font-size:18px;">Imaginando un mundo donde hacer el súper es divertido con Kellogg's.
+                                            <span style=" font-size:28px;">
+                                               HOMBRE-PANTALLAS<br> ACTIVACIONES EN AUTOSERVICIO<br><br></span><span style=" font-size:18px;">Imaginando un mundo donde hacer el súper es divertido con Kellogg's.
                                             </span>
 
                                            
