--- a/html/our_projects/microsoft1.html
+++ b/html/our_projects/microsoft1.html
@@ -547,7 +547,7 @@
 
                                     <h1>LANZAMIENTO WINDOWS 8 DEVELOPERS </h1>
 
-                                    <h2>Innovar es aún más fácil con  Windows Re-Imaginado</h2>
+                                    <h2>Innovar es  más fácil con  Windows Re-Imaginado</h2>
 
                                 </div>                                                    
 
@@ -573,7 +573,7 @@
 
                                 <h1>LANZAMIENTO WINDOWS 8 DEVELOPERS </h1>
 
-                                    <h2>Innovar es aún más fácil con  Windows Re-Imaginado</h2>
+                                    <h2>Innovar es  más fácil con  Windows Re-Imaginado</h2>
 
                                 </div>                                                    
 
@@ -598,7 +598,7 @@
 
                                 <h1>LANZAMIENTO WINDOWS 8 DEVELOPERS </h1>
 
-                                    <h2>Innovar es aún más fácil con  Windows Re-Imaginado</h2>
+                                    <h2>Innovar es  más fácil con  Windows Re-Imaginado</h2>
 
                                 </div>                                                    
 
@@ -623,7 +623,7 @@
 
                                 <h1>LANZAMIENTO WINDOWS 8 DEVELOPERS </h1>
 
-                                    <h2>Innovar es aún más fácil con  Windows Re-Imaginado</h2>
+                                    <h2>Innovar es  más fácil con  Windows Re-Imaginado</h2>
 
                                 </div>                                                    
 
@@ -718,8 +718,8 @@
 
                                            <p style="color: #c42634; font-size:28px;">MICROSOFT</p>
 
-                                            <span style="color: #http://martin.local/gideas/#store/microsoft1.html; font-size:28px;">
-                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style="color: #FFF; font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
+                                            <span style="color:  font-size:20px;">
+                                            LANZAMIENTO WINDOWS 8 DEVELOPERS<br><br><br></span><span style=" font-size:18px;">Innovar es aún más fácil con  Windows Re-Imaginado<br><br> 
 
                                             </span>
 
@@ -735,10 +735,10 @@
 
                                         <div class="columns-preview-description">
 
-                                          <p style="color: #FFF; font-size:28px;">MICROSOFT</p>
+                                          <p style="color: #c42634;  font-size:28px;">MICROSOFT</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style="color: #FFF; font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
+                                            <span style=" font-size:20px;">
+                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style=" font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
 
                                             </span>
 
@@ -753,10 +753,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">MICROSOFT</p>
+                                           <p style="color: #c42634;  font-size:28px;">MICROSOFT</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style="color: #FFF; font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
+                                            <span style=" font-size:20px;">
+                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style=" font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
 
                                             </span>
 
@@ -774,10 +774,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">MICROSOFT</p>
+                                           <p style="color: #c42634;  font-size:28px;">MICROSOFT</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style="color: #FFF; font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
+                                            <span style=" font-size:20px;">
+                                            LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style=" font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
 
                                             </span>
 
