--- a/html/our_projects/mtv.html
+++ b/html/our_projects/mtv.html
@@ -549,7 +549,7 @@
 
                                     <h1>UP FRONT FY 13</h1>
 
-                                    <h2>Conoce, experimenta, vive que lo más trendy de la música</h2>
+                                    <h2>Conoce, 	 vive que lo más trendy de la música</h2>
 
                                 </div>                                                    
 
@@ -600,7 +600,7 @@
 
                                     <h1>ACTIVACIONES BEAVIS & BUTTHEAD</h1>
 
-                                    <h2>Más Música,Más Irreverencia. /h2>
+                                    <h2>Más Música,Más Irreverencia. </h2>
 
                                 </div>                                                     
 
