--- a/html/our_projects/mtv1.html
+++ b/html/our_projects/mtv1.html
@@ -744,10 +744,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">MTV</p>
+                                             <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            UP FRONT FY 13  <br><br><br></span><span style="color: #FFF; font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
+                                            <span style="font-size:28px;">
+                                            UP FRONT FY 13  <br></span><span style="font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
 
                                             </span>
 
@@ -763,10 +763,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">MTV</p>
+                                            <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            UP FRONT FY 13  <br><br><br></span><span style="color: #FFF; font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
+                                            <span style=" font-size:28px;">
+                                            UP FRONT FY 13 <br></span><span style="font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
 
                                             </span>
 
@@ -781,10 +781,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">MTV</p>
+                                             <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            UP FRONT FY 13  <br><br><br></span><span style="color: #FFF; font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
+                                            <span style=" font-size:28px;">
+                                            UP FRONT FY 13  <br></span><span style="font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
 
                                             </span>
 
@@ -801,10 +801,10 @@
                                         </div>
 
                                         <div class="columns-preview-description">
-                                            <p style="color: #FFF; font-size:28px;">MTV</p>
+                                            <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                            UP FRONT FY 13  <br><br><br></span><span style="color: #FFF; font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
+                                            <span style=" font-size:28px;">
+                                            UP FRONT FY 13  <br></span><span style=" font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
 
                                             </span>
 
@@ -817,10 +817,10 @@
                                         <div class="columns-preview-media" data-src="assets/media/our_projects/projects/mtv/eventos/Eventos-GIDEAS-para-MTV-_IV--B--11--v.jpg"></div>
 
                                         <div class="columns-preview-description">
-                                             <p style="color: #FFF; font-size:28px;">MTV</p>
+                                             <p style="color: #c42634; font-size:28px;">MTV</p>
 
                                             <span style="color: #FFF; font-size:28px;">
-                                            UP FRONT FY 13  <br><br><br></span><span style="color: #FFF; font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
+                                            UP FRONT FY 13  <br></span><span style="font-size:18px;">Conoce, experimenta, vive que lo más trendy de la música y lo más cool del entretenimiento están sólo en  MTV. <br><br> 
 
                                             </span>
                                         </div>
