--- a/html/our_projects/mtv2.html
+++ b/html/our_projects/mtv2.html
@@ -744,10 +744,10 @@
 
                                         <div class="columns-preview-description">
 
-                                               <p style="color: #FFF; font-size:28px;">MTV</p>
+                                               <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           CONSUMER PRODUCTS EVENT  <br><br><br></span><span style="color: #FFF; font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
+                                            <span style="font-size:28px;">
+                                           CONSUMER PRODUCTS EVENT  <br></span><span style="font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
 
                                             </span>
                                            
@@ -762,10 +762,10 @@
 
                                         <div class="columns-preview-description">
 
-                                              <p style="color: #FFF; font-size:28px;">MTV</p>
+                                              <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           CONSUMER PRODUCTS EVENT  <br><br><br></span><span style="color: #FFF; font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
+                                            <span style="font-size:28px;">
+                                           CONSUMER PRODUCTS EVENT  <br></span><span style="c font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
 
                                             </span>
 
@@ -780,10 +780,10 @@
 
                                         <div class="columns-preview-description">
 
-                                               <p style="color: #FFF; font-size:28px;">MTV</p>
+                                               <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           CONSUMER PRODUCTS EVENT  <br><br><br></span><span style="color: #FFF; font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
+                                            <span style=" font-size:28px;">
+                                           CONSUMER PRODUCTS EVENT  <br></span><span style=" font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
 
                                             </span>
 
@@ -801,10 +801,10 @@
 
                                         <div class="columns-preview-description">
 
-                                               <p style="color: #FFF; font-size:28px;">MTV</p>
+                                               <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           CONSUMER PRODUCTS EVENT  <br><br><br></span><span style="color: #FFF; font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
+                                            <span style="font-size:28px;">
+                                           CONSUMER PRODUCTS EVENT  <br></span><span style="color: #FFF; font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
 
                                             </span>
 
@@ -818,10 +818,10 @@
 
                                         <div class="columns-preview-description">
 
-                                              <p style="color: #FFF; font-size:28px;">MTV</p>
+                                              <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           CONSUMER PRODUCTS EVENT  <br><br><br></span><span style="color: #FFF; font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
+                                            <span style=" font-size:28px;">
+                                           CONSUMER PRODUCTS EVENT <br></span><span style=" font-size:18px;">Más que un expo: creamos  el atelier perfecto para las marcas adultas de MTV. <br><br> 
 
                                             </span>
 
