--- a/html/our_projects/off.html
+++ b/html/our_projects/off.html
@@ -631,10 +631,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">OFF</p>
+                                           <p style="color: #c42634; font-size:28px;">OFF</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br><br><br></span><span style="color: #FFF; font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
+                                            <span style="font-size:28px;">
+                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br></span><span style=" font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
                                             </span>
                                            
 
@@ -648,10 +648,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">OFF</p>
+                                           <p style="color: #c42634; font-size:28px;">OFF</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br><br><br></span><span style="color: #FFF; font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
+                                            <span style=" font-size:28px;">
+                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br></span><span style="font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
                                             </span>
 
 
@@ -665,10 +665,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">OFF</p>
+                                            <p style="color: #c42634; font-size:28px;">OFF</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br><br><br></span><span style="color: #FFF; font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
+                                            <span style=" font-size:28px;">
+                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br></span><span style="font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
                                             </span>
 
                                         </div>
@@ -685,10 +685,10 @@
 
                                         <div class="columns-preview-description">
 
-                                               <p style="color: #FFF; font-size:28px;">OFF</p>
+                                               <p style="color: #c42634; font-size:28px;">OFF</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br><br><br></span><span style="color: #FFF; font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
+                                            <span style="font-size:28px;">
+                                                GUERRILLA  MARKETING -OFF vs. INVASIÓN DE MOSCOS- <br></span><span style=" font-size:18px;">"If you think you're too small to have an impact, try going to bed with a mosquito in the room" Anita Roddick.
 
                                             </span>
 
