--- a/html/our_projects/amafore2.html
+++ b/html/our_projects/amafore2.html
@@ -741,10 +741,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">AMAFORE</p>
+                                            <p style="color: #c42634; font-size:28px;">AMAFORE</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                          CAMPAÑA PREPARA TU FUTURO 2012    <br><br><br></span><span style="color: #FFF; font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
+                                            <span style=" font-size:28px;">
+                                          CAMPAÑA PREPARA TU FUTURO 2012    <br></span><span style=" font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
 
                                             </span>
 
@@ -760,10 +760,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">AMAFORE</p>
+                                             <p style="color: #c42634; font-size:28px;">AMAFORE</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                          CAMPAÑA PREPARA TU FUTURO 2012    <br><br><br></span><span style="color: #FFF; font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
+                                            <span style=" font-size:28px;">
+                                          CAMPAÑA PREPARA TU FUTURO 2012    <br></span><span style="font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
 
                                             </span>
 
@@ -778,10 +778,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">AMAFORE</p>
+                                            <p style="color: #c42634; font-size:28px;">AMAFORE</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                          CAMPAÑA PREPARA TU FUTURO 2012    <br><br><br></span><span style="color: #FFF; font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
+                                            <span style=" font-size:28px;">
+                                          CAMPAÑA PREPARA TU FUTURO 2012    <br></span><span style=" font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
 
                                             </span>
 
@@ -799,10 +799,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">AMAFORE</p>
+                                            <p style="color: #c42634; font-size:28px;">AMAFORE</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                          CAMPAÑA PREPARA TU FUTURO 2012    <br><br><br></span><span style="color: #FFF; font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
+                                            <span style=" font-size:28px;">
+                                          CAMPAÑA PREPARA TU FUTURO 2012    <br></span><span style="font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
 
                                             </span>
 
@@ -816,10 +816,10 @@
 
                                         <div class="columns-preview-description">
 
-                                          <p style="color: #FFF; font-size:28px;">AMAFORE</p>
+                                          <p style="color: #c42634; font-size:28px;">AMAFORE</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                          CAMPAÑA PREPARA TU FUTURO 2012    <br><br><br></span><span style="color: #FFF; font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
+                                            <span style=" font-size:28px;">
+                                          CAMPAÑA PREPARA TU FUTURO 2012   <br></span><span style=" font-size:18px;">El futuro no es cuestión de suerte:    infórmate, planea y cuatifica tu              ahorro para el retiro.<br><br> 
 
                                             </span>
 
