--- a/html/our_projects/appleton5.html
+++ b/html/our_projects/appleton5.html
@@ -741,10 +741,10 @@
 
                                         <div class="columns-preview-description">
  <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">APPLETON</p>
+                                        <p style="color: #c42634; font-size:28px;">APPLETON</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             CONVENCIÓN BROWN FORMAN 2012  <br><br><br></span><span style="color: #FFF; font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
+                                            <span style="font-size:28px;">
+                                             CONVENCIÓN BROWN FORMAN 2012  <br></span><span style=" font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
 
                                             </span>
 
@@ -759,10 +759,10 @@
                                         <div class="columns-preview-description">
 
                                         <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">APPLETON</p>
+                                        <p style="color: #c42634; font-size:28px;">APPLETON</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             CONVENCIÓN BROWN FORMAN 2012  <br><br><br></span><span style="color: #FFF; font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
+                                            <span style="font-size:28px;">
+                                             CONVENCIÓN BROWN FORMAN 2012 <br></span><span style="font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
 
                                             </span>
 
@@ -775,10 +775,10 @@
                                         <div class="columns-preview-description">
 
                                         <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">APPLETON</p>
+                                        <p style="color: #c42634; font-size:28px;">APPLETON</p>
 
                                             <span style="color: #FFF; font-size:28px;">
-                                             CONVENCIÓN BROWN FORMAN 2012  <br><br><br></span><span style="color: #FFF; font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
+                                             CONVENCIÓN BROWN FORMAN 2012  <br></span><span style="color: #FFF; font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
 
                                             </span>
 
@@ -792,10 +792,10 @@
                                         <div class="columns-preview-description">
 
                                         <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">APPLETON</p>
+                                        <p style="color: #c42634; font-size:28px;">APPLETON</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             CONVENCIÓN BROWN FORMAN 2012  <br><br><br></span><span style="color: #FFF; font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
+                                            <span style="font-size:28px;">
+                                             CONVENCIÓN BROWN FORMAN 2012  <br></span><span style=" font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
 
                                             </span>
 
@@ -810,10 +810,10 @@
                                         <div class="columns-preview-description">
 
                                         <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">APPLETON</p>
+                                        <p style="color: #c42634; font-size:28px;">APPLETON</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                             CONVENCIÓN BROWN FORMAN 2012  <br><br><br></span><span style="color: #FFF; font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
+                                            <span style="font-size:28px;">
+                                             CONVENCIÓN BROWN FORMAN 2012  <br></span><span style=" font-size:18px;">Cabalcando la onda al estilo  Appleton. <br><br> 
 
                                             </span>
 
