--- a/html/our_projects/kinde_delice.html
+++ b/html/our_projects/kinde_delice.html
@@ -635,10 +635,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">KINDER DELICE</p>
+                                            <p style="color: #c42634; font-size:28px;">KINDER DELICE</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               SAMPLING 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">CREANDO UNA DELICIOSA CONEXIÓN  CON KINDER DELICE 
+                                            <span style=" font-size:28px;">
+                                               SAMPLING 2012<br><br><br></span><span style=" font-size:18px;">CREANDO UNA DELICIOSA CONEXIÓN  CON KINDER DELICE 
                                             </span>
 
                                            
