--- a/html/our_projects/mtv3.html
+++ b/html/our_projects/mtv3.html
@@ -744,10 +744,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">MTV</p>
+                                           <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br><br><br></span><span style="color: #FFF; font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
+                                            <span style=" font-size:28px;">
+                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br></span><span style=" font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
 
                                             </span>
 
@@ -763,10 +763,10 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">MTV</p>
+                                           <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br><br><br></span><span style="color: #FFF; font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
+                                            <span style=" font-size:28px;">
+                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br></span><span style=" font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
 
                                             </span>
 
@@ -781,10 +781,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">MTV</p>
+                                             <p style="color: color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br><br><br></span><span style="color: #FFF; font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
+                                            <span style="font-size:28px;">
+                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br></span><span style=" font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
 
                                             </span>
 
@@ -802,10 +802,10 @@
 
                                         <div class="columns-preview-description">
 
-                                             <p style="color: #FFF; font-size:28px;">MTV</p>
+                                             <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br><br><br></span><span style="color: #FFF; font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
+                                            <span style="font-size:28px;">
+                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br></span><span style=" font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
 
                                             </span>
 
@@ -819,10 +819,10 @@
 
                                         <div class="columns-preview-description">
 
-                                            <p style="color: #FFF; font-size:28px;">MTV</p>
+                                            <p style="color: #c42634; font-size:28px;">MTV</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS   <br><br><br></span><span style="color: #FFF; font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
+                                            <span style=" font-size:28px;">
+                                           ACTIVACIONES BEAVIS & BUTTHEAD EN CONCIERTOS  <br></span><span style="color: #FFF; font-size:18px;">Más Música,                                            Más Irreverencia.  <br><br> 
 
                                             </span>
                                         </div>
