--- a/html/our_projects/nutella.html
+++ b/html/our_projects/nutella.html
@@ -633,10 +633,10 @@
                                         <div class="columns-preview-media" data-src="assets/media/our_projects/projects/nutella/DEGUSTAND-GIDEAS-para--NUTELLA_IV-C-2-i.png"></div>
 
                                         <div class="columns-preview-description">
-                                        <p style="color: #FFF; font-size:28px;">NUTELLA</p>
+                                        <p style="color: #c42634; font-size:28px;">NUTELLA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               SAMPLING 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">Esta mañana, para el desayuno:<br><br>    toda la ENERGÍA FÍSICA y MENTAL NECESARIA PARA SEGUIR TU DÍA, ¡en sólo 18 gramos de Nutella!
+                                            <span style="font-size:28px;">
+                                               SAMPLING 2012<br></span><span style=" font-size:18px;">Esta mañana, para el desayuno:<br><br>    toda la ENERGÍA FÍSICA y MENTAL NECESARIA PARA SEGUIR TU DÍA, ¡en sólo 18 gramos de Nutella!
 
                                             </span>
 
@@ -651,10 +651,10 @@
                                         <div class="columns-preview-media" data-src="assets/media/our_projects/projects/nutella/DEGUSTAND-GIDEAS-para--NUTELLA_IV-C-2--ii.png"></div>
 
                                        <div class="columns-preview-description">
-                             <p style="color: #FFF; font-size:28px;">NUTELLA</p>
+                             <p style="color: #c42634; font-size:28px;">NUTELLA</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
-                                               SAMPLING 2012<br><br><br></span><span style="color: #FFF; font-size:18px;">Esta mañana, para el desayuno:<br><br>    toda la ENERGÍA FÍSICA y MENTAL NECESARIA PARA SEGUIR TU DÍA, ¡en sólo 18 gramos de Nutella!
+                                            <span style=" font-size:28px;">
+                                               SAMPLING 2012<br></span><span style=" font-size:18px;">Esta mañana, para el desayuno:<br><br>    toda la ENERGÍA FÍSICA y MENTAL NECESARIA PARA SEGUIR TU DÍA, ¡en sólo 18 gramos de Nutella!
 
                                             </span>
 
